<resources>
    <string name="app_name">MemorialQuest</string>
    <string name="intro_text">
        Willkommen im Spiel MemorialQuest\n
        Man nennt mich den Bewahrer des Wissens. Meine Aufgabe ist es, die Kultur vergangener Zeiten zu erforschen, zu dokumentieren und zu erhalten. Momentan schreibe ich die umfangreichste
        Enzyklopädie aller Zeiten. Damit ich meine Aufgabe erfüllen kann, brauche ich deine Hilfe!\n
        Überall in deiner Umgebung findest du kulturell wertvolle Bauwerke wie Denkmäler, historische Gebäude oder Gedenktafeln. Hierbei handelt es sich um Überbleibsel der Vergangenheit oder
        Objekte, die an frühere Geschehnisse erinnern sollen.\n
        Auf der Karte, die du gleich sehen wirst, habe ich die wichtigsten Stellen markiert. Tippe einfach auf ein Icon um Informationen zu dem Objekt zu erhalten. Hier musst du besonders
        aufmerksam sein, denn später wirst du dieses Wissen brauchen um ein Quiz zu lösen. Wenn du das Spiel beendest werden alle gesammelten Informationen an mich übertragen, damit ich sie
        in mein Lexikon eintragen kann.\n
        Nachdem du eine bestimmte Anzahl an Objekten in deiner Umgebung besucht hast, bekommst du ein Abzeichen, mit dem du weitere Minispiele freischalten kannst.\n
        Und jetzt, viel Spaß beim Spielen!

    </string>
    <string name="achievement_text_heading">Herzlichen Glückwunsch!</string>
    <string name="achievement_text_content">Gute Arbeit! Du hast genügend Punkte gesammelt und die nächste Stufe erreicht. Erforsche deine Umgebung noch weiter um das Lexikon mit neuen Inhalten zu befüllen.</string>
    <string name="game_1_heading">Lückentext</string>
    <string name="game_1_content">In diesem Spiel musst du die Lücken im Text mit den richtigen Begriffen füllen.</string>
    <string name="game_2_heading">Erkundung</string>
    <string name="game_2_content">Erforsche deine Umgebung und wähle das richtige Bild aus.</string>
    <string name="game_dialog_start">Spiel Starten!</string>
    <string name="exploration_game_header">Welches Bild gehört zu diesem Objekt?</string>
</resources>
