<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="600dp"
    android:minHeight="300dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_1_heading"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fill_blanks"
                android:alpha="0.2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/game_1_content"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:paddingBottom="50dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="50dp"
                android:textAlignment="center"/>
        </FrameLayout>

        <Button
            android:id="@+id/button_game_1"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/game_dialog_start"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_2_heading"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_pick"
                android:alpha="0.2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/game_2_content"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:paddingBottom="50dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="50dp"
                android:textAlignment="center"/>
        </FrameLayout>

        <Button
            android:id="@+id/button_game_2"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_dialog_start"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

</LinearLayout>